--- a/RoomBooker/src/index.html
+++ b/RoomBooker/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="https://pbs.twimg.com/profile_images/588342133125468160/0esgVCxq_400x400.jpg">
+  <link rel="icon" type="image/x-icon" href="https://scontent.fcph2-1.fna.fbcdn.net/v/t1.15752-9/46207790_302979100428004_4227991558806306816_n.png?_nc_cat=107&_nc_ht=scontent.fcph2-1.fna&oh=b755c3db160ce8c3e5afc4bb9ba709ff&oe=5C684A8A">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   
 </head>
